<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:windowSoftInputMode="stateVisible"
    tools:context=".LoginScreen">

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="128dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lets_start"
        android:textColor="@color/dark_text"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo2"
        app:layout_constraintVertical_bias="0.45"
        tools:textColorHint="@color/dark_text_hint" />

    <TextView
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"

        android:layout_marginTop="16dp"

        android:background="@drawable/dark_button"
        android:gravity="center"

        android:hint="@string/password"
        android:padding="10dp"
        android:text="Register"
        android:textColor="@color/dark_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/dark_button_background"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:textColor="@color/dark_text"
        android:textColorHint="@color/dark_text_hint"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:textColorHint="@color/dark_text_hint" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/dark_button_background"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/dark_text"
        android:textColorHint="@color/dark_text_hint"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/move_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_now"
        android:textColor="@color/dark_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/register_loading_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTintMode="src_atop"
            android:progressTint="@color/dark_button_background"
            android:indeterminateTint="@color/dark_button_background"
            android:indeterminate="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>