<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".InfoScreen">

    <EditText
        android:id="@+id/age"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/dark_button_background"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="numberSigned"
        android:imeOptions="actionNext"
        android:textColor="@color/dark_text"
        android:textColorHint="@color/dark_text_hint"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:textColorHint="@color/dark_text_hint" />

    <EditText
        android:id="@+id/hobbies"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/dark_button_background"
        android:ems="10"
        android:hint="@string/hobbies"
        android:inputType="textShortMessage"
        android:imeOptions="actionNext"
        android:textColor="@color/dark_text"
        android:textColorHint="@color/dark_text_hint"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age"
        tools:textColorHint="@color/dark_text_hint" />

    <EditText
        android:id="@+id/location"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/dark_button_background"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="textShortMessage"
        android:textColor="@color/dark_text"
        android:textColorHint="@color/dark_text_hint"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hobbies"
        tools:textColorHint="@color/dark_text_hint" />

    <ImageView
        android:id="@+id/logo3"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="324dp"
        android:text="@string/know_you"
        android:textColor="@color/dark_text"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo3"
        app:layout_constraintVertical_bias="0.74"
        tools:textColorHint="@color/dark_text_hint" />

    <TextView
        android:id="@+id/generate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"

        android:layout_marginTop="16dp"

        android:background="@drawable/dark_button"
        android:gravity="center"

        android:padding="10dp"
        android:text="@string/generate_positions"
        android:textColor="@color/dark_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/availability"
        app:layout_constraintVertical_bias="0.0" />

    <SeekBar
        android:id="@+id/availability"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:indeterminateTint="@color/dark_button_background"
        android:max="9"
        android:min="1"
        android:progressTint="@color/dark_button_background"
        android:thumbTint="@color/dark_button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/availabilityText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="1"
        android:textColor="@color/dark_text"
        app:layout_constraintEnd_toStartOf="@+id/availability"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/availabilityText" />

    <TextView
        android:id="@+id/availabilityValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="1"
        android:textColor="@color/dark_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/availability"
        app:layout_constraintTop_toBottomOf="@+id/availabilityText" />

    <TextView
        android:id="@+id/availabilityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/availability"
        android:textColor="@color/dark_text_hint"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <RelativeLayout
        android:id="@+id/info_loading_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTintMode="src_atop"
            android:progressTint="@color/dark_button_background"
            android:indeterminateTint="@color/dark_button_background"
            android:indeterminate="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>